Changes in version 0.0.2 - UNRELEASED:

Changes in version 0.0.1 - 2016-12-09:
 * Initial release.