@@ -1,4 +1,5 @@
 Changes in version 0.0.2 - UNRELEASED:
+ * Bug #20780; Shuffle and persist the ordering of internal bridges.
 
 Changes in version 0.0.1 - 2016-12-09:
  * Initial release.
